# Team1Repository

./: .gitignore  GIT INSTRUCTIONS.txt
Mechanical CAD Files/Designed Payload Sleds/Box Containing Blocks/: Clamp for bearing.STL  Roller Ball Bearing.STL  Servo Motor Clamp for box.STL  Shaft for Box.STL  Storage box for Blocks.STL
Mechanical CAD Files/Designed Payload Sleds/Nuc Plate/: Draft for Nuc Holder.STL  Hook for Nuc Holder.STL
Mechanical CAD Files/Designed Payload Sleds/Payload Sled Base Plate/: Draft for Base Payload Sled.STL
Mechanical CAD Files/Designed Payload Sleds/Payload Sled Second Layer/: Draft for Manipulator Payload Sled.STL
Mechanical CAD Files/Robot Component/Dynamixel XL430 W250 Servo Motor/: XL430_W250_T.STL
Mechanical CAD Files/Robot Component/Intel Realsense Depth Camera D435/: RealSense_D435.STL
Mechanical CAD Files/Robot Component/Leo Rover/: Link to Dropbox  Link to Dropbox.md
Mechanical CAD Files/Robot Component/Trossen PincherX 150 Manipulator/: 2 - PXA-150-M.STL
Mechanical CAD Files/Robot Component/rpLidar A2M12/: Intel Realsense RPLIDAR A2.STL
Mechanical CAD Files/Robot Final Assembly/: Link to Aseembly.md
Navigation/attempt1 - python code/attempt1.1 - using ROS/: Code_for_Obstacle_Avoidance.py  Mapping_&_SLAM.py  readme.txt  testlidar.py
Navigation/attempt1 - python code/attempt1.2  - openCV/: Mapping.py  obstacle_avoidance.py  readme.txt
Navigation/attempt1 - python code/attempt1.3/: mapping.py  obstacle_avoidance.py  test.py
Navigation/attempt2 - rosws code/attempt2.1/ros_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
Navigation/attempt2 - rosws code/attempt2.1/ros_ws/log/: latest_build
Navigation/attempt2 - rosws code/attempt2.2 - fake scan/ros_ws/src/: Readme.txt
Navigation/attempt2 - rosws code/attempt2.3- real scan/ros_ws/src/: Readme.txt
ObjectDetection/attempt9-UsingSDK/attempt9.1/: RealSense_SDK.py
ObjectDetection/attempt9-UsingSDK/attempt9.2/: Readme.txt
ObjectDetection/attempt9-UsingSDK/attempt9.2/ros_ws/install/: local_setup.sh  setup.sh
ObjectDetection/attempt9-UsingSDK/attempt9.2/ros_ws/log/: latest_build
ObjectDetection/attempt9-UsingSDK/attempt9.3/: Readme.txt
ObjectDetection/attempt9-UsingSDK/attempt9.3/ros_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ObjectDetection/attempt9-UsingSDK/attempt9.3/ros_ws/log/: latest_build
leo_rover_simulation/: requirements.txt
leo_rover_simulation/ros2_ws/: requirements.txt
leo_rover_simulation/ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
leo_rover_simulation/ros2_ws/install/gui_controller_leo/share/gui_controller_leo/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
leo_rover_simulation/ros2_ws/install/gui_controller_leo/share/gui_controller_leo/config/: planner.yaml
leo_rover_simulation/ros2_ws/install/gui_controller_leo/share/gui_controller_leo/launch/: gui_controller_launch.py  localisation.launch.py  sim_robot.launch.py  slam.launch.py
leo_rover_simulation/ros2_ws/install/leo_navigation_tutorial_ros2/share/leo_navigation_tutorial_ros2/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
leo_rover_simulation/ros2_ws/install/leo_navigation_tutorial_ros2/share/leo_navigation_tutorial_ros2/config/ekf_localization_node/: ekf_3d.yaml
leo_rover_simulation/ros2_ws/install/leo_navigation_tutorial_ros2/share/leo_navigation_tutorial_ros2/launch/: gmapping.launch.py
leo_rover_simulation/ros2_ws/log/: latest_build
leo_rover_simulation/ros2_ws/src/gui_controller_leo/: setup.cfg  setup.py
leo_rover_simulation/ros2_ws/src/gui_controller_leo/launch/: map_server.launch.py  nav_demo.launch.py  slam.launch.py  (+1 more)
leo_rover_simulation/ros2_ws/src/leo_navigation_tutorial_ros2/: CMakeLists.txt
leo_rover_simulation/ros2_ws/src/leo_navigation_tutorial_ros2/config/ekf_localization_node/: ekf_2d.yaml
leo_rover_simulation/ros2_ws/src/leo_navigation_tutorial_ros2/launch/: gmapping.launch.py  odometry.launch.py
src/: README.txt
src/camera/: README.txt
src/camera/main/: main.py
src/camera/models/: Objection.py  Position_tansform.py
src/gripper/: README.txt  arm_controller.py  color_copy.py  publisher_test_copy.py
src/gripper/models/: image_pipeline.py  publisher_control_node.py  readme.md  subscriber_control_node.py
src/lidar/: README.txt
src/lidar/main/: main.py
src/lidar/models/: RPLFunctions.py
(+59 files in other folders)
