<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gui_controller_leo</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="islam.elbagiraminsalih@student.manchester.ac.uk">mscrobotics2425laptop35</maintainer>
  <license>TODO: License declaration</license>


  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>ament_index_python</depend>
  <depend>tkinter</depend>  <!-- Tkinter is usually included with Python, but it's good to mention -->
  <depend>slam_toolbox</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
