<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>leo_navigation_tutorial_ros2</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="islam.elbagiraminsalih@student.manchester.ac.uk">mscrobotics2425laptop35</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>

  <depend>robot_localization</depend>
  <depend>nav2_costmap_2d</depend>

  <depend>imu_filter_madgwick</depend>
  <depend>slam_toolbox</depend>
  <depend>nav2_map_server</depend>
  <depend>nav2_amcl</depend>
  <depend>nav2_planner</depend>
  <depend>nav2_behavior_tree</depend>
  <depend>twist_mux</depend>

  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>ament_index_python</depend>
  <depend>tkinter</depend>  <!-- Tkinter is usually included with Python, but it's good to mention -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
